--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'baseURL = "https://spikemurphy.github.io/Laboratory/"'
 languageCode = 'en-us'
 title = 'Laboratory'
 
