--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,8 @@
 baseURL = 'https://spikemurphy.github.io/BiochemProtocols/'
 languageCode = 'en-us'
-title = 'Laboratory'
+title = 'BiochemProtocols'
+relativeURLs = true
+canonifyURLs = false
 
 [markup]
   [markup.goldmark]
