--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -44,7 +44,7 @@ jobs:
         env:
           HUGO_ENVIRONMENT: production
         run: |
-          hugo --gc --minify
+          hugo --gc --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
