new content: PBS, PBST, TBS, TBST, SDS-PAGE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,26 +7,35 @@
     "DONE"
   ],
   "cSpell.words": [
-    "chemicalname",
-    "infobox",
+    "acrylamid",
     "anhydrotetracycline",
     "aprotinin",
     "Bertani",
+    "chemicalname",
+    "dihydrogen",
     "dimethylsulfoxid",
+    "disodium",
+    "Dithiothreitol",
+    "dodecyl",
+    "EDTA",
     "equibrilation",
     "etoh",
     "hemisulphate",
+    "infobox",
     "IPTG",
     "Laemmli",
     "leupeptin",
     "lysate",
+    "mastermix",
     "meoh",
+    "metalloproteins",
     "methanesulfinyl",
     "microfuge",
     "micropipettes",
     "Müller",
     "nacl",
     "pepstatin",
+    "persulfate",
     "Phenylmethylsulfonyl",
     "PMSF",
     "relref",
@@ -35,6 +44,9 @@
     "resuspension",
     "sedimenting",
     "sonifications",
+    "TBST",
+    "TEMED",
+    "tetramethylethylenediamine",
     "thiogalactopyranosid",
     "tris",
     "tryptone",
